syntax = "proto3";

package my.sdtest.backend2;


option java_multiple_files = true;
option java_package = "my.sdtest.backend2";


service Backend2Service {
    rpc HelloBackend2 (B2Request) returns (B2Response) {}
}

message B2Request {
    string message = 1;
}

message B2Response {
    string answer = 1;
}
